feat: finished order logics and documentation for it
