# src/main/resources/static/openapi.yaml
@@ -67,7 +67,7 @@ paths:
                 - Customer
             parameters:
                 -   $ref: '#/components/parameters/ApiVersionHeader'
-                -   $ref: '#/components/parameters/CustomerId'
+                -   $ref: '#/components/parameters/CommonId'
             responses:
                 '200':
                     description: Found the customer
@@ -93,7 +93,7 @@ paths:
                 - Customer
             parameters:
                 -   $ref: '#/components/parameters/ApiVersionHeader'
-                -   $ref: '#/components/parameters/CustomerId'
+                -   $ref: '#/components/parameters/CommonId'
             responses:
                 '204':
                     description: Customer deleted successfully
@@ -115,7 +115,7 @@ paths:
                 - Customer
             parameters:
                 -   $ref: '#/components/parameters/ApiVersionHeader'
-                -   $ref: '#/components/parameters/CustomerId'
+                -   $ref: '#/components/parameters/CommonId'
             requestBody:
                 required: true
                 content:
@@ -158,6 +158,127 @@ paths:
                     description: Invalid parameters supplied
                 '500':
                     description: Internal server error
+        post:
+            summary: Place an Order
+            operationId: placeOrder
+            tags:
+                - Order
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/OrderDTO'
+            parameters:
+                -   $ref: "#/components/parameters/ApiVersionHeader"
+            responses:
+                '201':
+                    description: Order placed successfully.
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/OrderDTO'
+                '400':
+                    description: Invalid request format or parameters.
+                '500':
+                    description: Internal server error.
+    /orders/{id}:
+        get:
+            summary: Get an order by ID
+            description: Returns a single order
+            operationId: getOrderById
+            tags:
+                - Order
+            parameters:
+                -   $ref: "#/components/parameters/ApiVersionHeader"
+                -   $ref: "#/components/parameters/CommonId"
+            responses:
+                '200':
+                    description: Found the order
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/OrderDTO'
+                '400':
+                    description: Invalid API version or ID supplied
+                '404':
+                    description: Order not found
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/NotFoundExceptionDTO'
+                '500':
+                    description: Internal server error
+        delete:
+            summary: Delete an order by ID
+            description: Deletes an order if it present in the system
+            operationId: deleteOrderById
+            tags:
+                - Order
+            parameters:
+                -   $ref: '#/components/parameters/ApiVersionHeader'
+                -   $ref: '#/components/parameters/CommonId'
+            responses:
+                '204':
+                    description: Order deleted successfully
+                '400':
+                    description: Invalid API version or ID supplied
+                '404':
+                    description: Order not found
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/NotFoundExceptionDTO'
+                '500':
+                    description: Internal server error
+        put:
+            summary: Replace an order by ID
+            description: Fetch an order by ID and replace old fields with new
+            operationId: replaceOrderById
+            tags:
+                - Order
+            parameters:
+                -   $ref: '#/components/parameters/ApiVersionHeader'
+                -   $ref: '#/components/parameters/CommonId'
+            requestBody:
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/OrderDTO'
+            responses:
+                '200':
+                    description: Order replaced successfully
+                '400':
+                    description: Invalid API version or ID supplied
+                '404':
+                    description: Order not found
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/OrderDTO'
+                '500':
+                    description: Internal server error
+    /backups:
+        get:
+            summary: Trigger Manual Backup
+            operationId: manualBackup
+            tags:
+                - Backup
+            parameters:
+                -   $ref: "#/components/parameters/ApiVersionHeader"
+            responses:
+                '200':
+                    description: Backup completed successfully.
+                    content:
+                        text/plain:
+                            schema:
+                                type: string
+                                example: Backup complete.
+                '400':
+                    description: Invalid API version provided.
+                '500':
+                    description: Internal server error.
 components:
     schemas:
         CustomerDTO:
@@ -229,7 +350,7 @@ components:
             schema:
                 type: string
             description: API version header
-        CustomerId:
+        CommonId:
             name: customerId
             in: path
             required: true
